# microservice-demo

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  noxfile.py  pyproject.toml  requirements.txt
microservice_demo/: app.py  config.py  dir_data.py
microservice_demo/tests/: conftest.py  test_app.py  test_dir_data.py
tests/: conftest.py  test_app.py  test_dir_data.py  test_file_data.py
