[tool.poetry]
name = "microservice-demo"
version = "0.1.0"
description = "A simple demo of microservice in Flask"
authors = ["Simon Weiss <wonder@simonweiss.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/weiss-d/microservice-demo"
repository = "https://github.com/weiss-d/microservice-demo"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
